--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Assignement-1</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>    
-
+        <nav>
+            <ul>
+                <li><a href="/">LOGO</a></li>
+                <li ><a href="/"><button class="btn-primary">Sign up</button></a></li>
+            </ul>
+        </nav>
     </header>
     <main>
 
