--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignement-1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <header>    
+<body class="raleway-normal">
+    <header class="header">    
         <nav>
             <ul>
-                <li><a href="/">LOGO</a></li>
+                <li><a class="inter-normal" href="/">LOGO</a></li>
                 <li ><a href="/"><button class="btn-primary">Sign up</button></a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <h1 class="banner-title">Cool Dark UI Template for Webflow Agencies!</h1>
+            <button class="btn-primary">Stay Focused</button>
+        </div>
     </header>
     <main>
 
