--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
         </div>
     </header>
     <main>
-
+        <section class="action">
+            <div class="action-left">
+                <h3>See it in Action</h3>
+                <p>Explore the live preview and imagine your brand in this bold new look</p>
+                <button class="btn-primary">Launch Live Preview</button>
+            </div>
+            <img class="wc-mini" src="/images/wc-mini.png" alt="Webflow Conf 2022">
+        </section>
     </main>
     <footer>
         
