--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="raleway-normal">
-    <header class="header">    
+    <header>    
         <nav>
             <ul>
                 <li><a class="inter-normal" href="/">LOGO</a></li>
@@ -25,11 +25,11 @@
     <main>
         <section class="action">
             <div class="action-left">
-                <h3>See it in Action</h3>
-                <p>Explore the live preview and imagine your brand in this bold new look</p>
+                <h3 class="action-title">See it in Action</h3>
+                <p class="action-sub">Explore the live preview and imagine your brand in this bold new look.</p>
                 <button class="btn-primary">Launch Live Preview</button>
             </div>
-            <img class="wc-mini" src="/images/wc-mini.png" alt="Webflow Conf 2022">
+            <img class="wc-mini" src="images/wc-mini.png" alt="Webflow Conf 2022">
         </section>
     </main>
     <footer>
