--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>    
         <nav>
             <ul>
-                <li><a class="inter-normal" href="/">LOGO</a></li>
+                <li><a class="inter-bolder" href="/">LOGO</a></li>
                 <li ><a href="/"><button class="btn-primary">Sign up</button></a></li>
             </ul>
         </nav>
@@ -30,6 +30,23 @@
                 <button class="btn-primary">Launch Live Preview</button>
             </div>
             <img class="wc-mini" src="images/wc-mini.png" alt="Webflow Conf 2022">
+        </section>
+        <section class="productive">
+            <h2>Joined Thousands of of Productive Users</h2>
+            <div class="productive-cards inter-normal">
+                <div class="card1">
+                    <h1 class="productive-title">50K</h1>
+                    <p class="productive-sub">Active Users</p>
+                </div>
+                <div class="card1">
+                    <h1 class="productive-title">2M+</h1>
+                    <p class="productive-sub">Focus Sessions</p>
+                </div>
+                <div class="card1">
+                    <h1 class="productive-title">95%</h1>
+                    <p class="productive-sub">Satisfaction Rate</p>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
