--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                 </div>
             </div>
         </section>
+        <section class="touch">
+            <p class="touch-title">Let's Get in Touch</p>
+            <form class="form-touch inter-normal">
+                <label for="">Email</label>
+                <input type="email" placeholder="example@email.com">
+                <label for="">Name</label>
+                <input type="text" placeholder="full name">
+                <label for="">Message</label>
+                <textarea name="" id="" placeholder="write your message..." rows="4"></textarea>
+                <button class="btn-primary">Get in Touch</button>
+            </form>
+        </section>
     </main>
     <footer>
         
