--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body class="raleway-normal">
     <header>    
         <nav>
-            <ul>
-                <li><a class="inter-bolder" href="/">LOGO</a></li>
-                <li ><a href="/"><button class="btn-primary">Sign up</button></a></li>
+            <ul class="head-nav">
+                <li><a class="inter-bolder head-btn" href="/">LOGO</a></li>
+                <li ><a class="head-btn" href="/"><button class="btn-primary">Sign up</button></a></li>
             </ul>
         </nav>
         <div class="banner">
@@ -62,7 +62,20 @@
         </section>
     </main>
     <footer>
-        
+        <h1 class="footer-title inter-bolder">
+            LOGO
+        </h1>
+        <p class="footer-sub">
+            Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.
+        </p>
+        <nav>
+            <ul class="foot-nav">
+                <li><a class="foot-links" href="/">Home</a></li>
+                <li><a class="foot-links" href="/">About</a></li>
+                <li><a class="foot-links" href="/">How it works</a></li>
+                <li><a class="foot-links" href="/">Services</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
