--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
                 </div>
             </div>
         </section>
+
+
+        <section class="focus">
+            <div>
+                <h1 class="focus-title">Ready to focus better</h1>
+                <p class="focus-sub">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="btn-primary">Get Started Free</button>
+            </div>
+            <img class="focus-img" src="images/wc-big.png" alt="Webflow Conf 2022 big">
+        </section>
+
+
         <section class="touch">
             <p class="touch-title">Let's Get in Touch</p>
             <form class="form-touch inter-normal">
