Challange part done

--- a/index.html
+++ b/index.html
@@ -50,6 +50,60 @@
         </section>
 
 
+        <section class="challange">
+            <h1 class="challange-title">What our users say</h1>
+            <div class="challange-container">
+                <div class="challange-card">
+                    <div class="star"></div>
+                    <h4 class="card-title">
+                        Loved by Designers
+                    </h4>
+                    <p class="card-sub">
+                        This template instantly leveled up our presence.” – Studio Vertex
+                    </p>
+                    <div class="mini-container">
+                        <img class="avatar"  src="images/avatar.png" alt="avatar">
+                        <div class="mini-card">
+                            <h6 class="mini-title">Reviewer name</h6>
+                            <p class="mini-sub">Date</p>
+                        </div>
+                    </div>  
+                </div>
+                <div class="challange-card">
+                    <div class="star"></div>
+                    <h4 class="card-title">
+                        Loved by Designers
+                    </h4>
+                    <p class="card-sub">
+                        This template instantly leveled up our presence.” – Studio Vertex
+                    </p>
+                    <div class="mini-container">
+                        <img class="avatar"  src="images/avatar.png" alt="avatar">
+                        <div class="mini-card">
+                            <h6 class="mini-title">Reviewer name</h6>
+                            <p class="mini-sub">Date</p>
+                        </div>
+                    </div>  
+                </div>
+                <div class="challange-card">
+                    <div class="star"></div>
+                    <h4 class="card-title">
+                        Loved by Designers
+                    </h4>
+                    <p class="card-sub">
+                        This template instantly leveled up our presence.” – Studio Vertex
+                    </p>
+                    <div class="mini-container">
+                        <img class="avatar"  src="images/avatar.png" alt="avatar">
+                        <div class="mini-card">
+                            <h6 class="mini-title">Reviewer name</h6>
+                            <p class="mini-sub">Date</p>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+        </section>
+
         <section class="focus">
             <div>
                 <h1 class="focus-title">Ready to focus better</h1>
